--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 .font-mono {
     font-family: 'IBM Plex Mono', monospace;
   }
+  @media (max-width: 640px) { 
+    body {
+      overflow: hidden;
+    }
+  }
   
